# sthali-crud

./: .gitignore  404.html  Dockerfile  README  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  run.py  run.sh
.build/: Dockerfile
.dependencies/: requirements-dev.txt  requirements-prd.txt  requirements.txt
.github/workflows/: build-upload-dockerhub.yml  build-upload-ghcr.yml  build-upload-pypi.yml  prepare.yml  python-publish.yml  test-package.yml  test.yml  upload-image.yml  upload-package copy.yml  upload-package.yml
docs/: index.md  test.md
scripts/: apply-version.py
src/: __init__.py  app_spec.py  config.py  crud.py  run.py  schemas.py  spec_example.py  types.py
src/sthali_crud/: __init__.py  config.py  crud.py  db.py  exceptions.py  helpers.py  models.py  old_crud.py  old_models.py  schema.py  types.py
src/sthali_crud.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sthali_crud/db_engines/: __init__.py  base.py  postgres.py  tinydb.py  virtual.py
src/sthali_crud_jhunufernandes.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: __init__.py  __init__.py.bkp  test_config.py  test_crud.py  test_db.py  test_models.py  test_sthalicrud.py
tests/db_engines/: __init__.py  test_base.py  test_db_engines.py  test_postgres.py  test_tinydb.py  test_virtual.py
volume/: spec_sample.yml
